data/all_generated_tests/raw_wast_tests/br_table_ImproperFunctionCallorReturnHandling_2380.wast
;; 10. **Test Description: Handling Function Call from Catch Block:**    - Design a `br_table` that leads into a function call from within a catch block, to test exception handling interaction.    - **Constraint Checked:** Tests proper stack management and control flow from exception handling into a function call.    - **Relation to Incorrect Exception Handling:** Ensures correct branching and function call handling from catch blocks without breaking the control flow.

(assert_invalid
  (module
    (func $test
      (try
        (do (br_table 0 1 (i32.const 0)))
        (catch (call 0))
      )
    )
  )
  "type mismatch"
)